feat(fluxer): mirror webhook edits via jump-link updates with cleanup

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/janus
 REDIS_URL=redis://localhost:6379
 FLUXER_API_URL=https://api.fluxer.app
 FLUXER_WS_URL=wss://gateway.fluxer.app
+FLUXER_WEB_BASE_URL=https://fluxer.app
+FLUXER_EDIT_UPDATE_TTL_SECONDS=604800
 LOG_LEVEL=info
 RATE_LIMIT_PER_CHANNEL=5
 LOOP_HASH_TTL=10
