--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
+    "lint": "eslint \"src/**/*.ts\" \"scripts/**/*.ts\" \"prisma.config.ts\" --max-warnings=0",
+    "lint:fix": "eslint \"src/**/*.ts\" \"scripts/**/*.ts\" \"prisma.config.ts\" --fix",
+    "format": "prettier --write \"**/*.{ts,js,json,md,yml,yaml}\"",
+    "format:check": "prettier --check \"**/*.{ts,js,json,md,yml,yaml}\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
@@ -54,7 +58,12 @@
     "@types/opossum": "^8.1.9",
     "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
     "pino-pretty": "^13.1.3",
+    "prettier": "^3.6.2",
     "prisma": "^7.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
