--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint \"src/**/*.ts\" \"scripts/**/*.ts\" \"prisma.config.ts\" --max-warnings=0",
     "lint:fix": "eslint \"src/**/*.ts\" \"scripts/**/*.ts\" \"prisma.config.ts\" --fix",
     "format": "prettier --write \"**/*.{ts,js,json,md,yml,yaml}\"",
@@ -66,6 +68,7 @@
     "prettier": "^3.6.2",
     "prisma": "^7.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
