feat(docker): add compose setup and local env loading convention

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Environment Variables
+# Local dev: copy to .env.local
+# Docker compose: copy to .env
 
 # Required
 DISCORD_TOKEN=your_discord_bot_token
@@ -7,6 +9,9 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/janus
 
 # Optional
 REDIS_URL=redis://localhost:6379
+POSTGRES_DB=janus
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 FLUXER_API_URL=https://api.fluxer.app
 FLUXER_WS_URL=wss://gateway.fluxer.app
 FLUXER_WEB_BASE_URL=https://fluxer.app
